:bug: Fix custom font upload fails silently for unsupported formats

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -4564,3 +4564,6 @@ msgstr "Click to close the path"
 
 msgid "errors.profile-blocked"
 msgstr "The profile is blocked"
+
+msgid "errors.bad-font"
+msgstr "The font could not be loaded"
