--- a/frontend/translations/es.po
+++ b/frontend/translations/es.po
@@ -4765,3 +4765,9 @@ msgstr "Pulsar para cerrar la ruta"
 
 msgid "errors.profile-blocked"
 msgstr "El perfil esta blockeado"
+
+msgid "errors.bad-font"
+msgstr "No se ha podido cargar la fuente %s"
+
+msgid "errors.bad-font-plural"
+msgstr "No se han podido cargar las fuentes %s"
